[package]
name = "sabaton-mw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyclonedds-rs = "0.4"
cdds_derive = "0.1.0"
async-std = "1.9.0"
futures = "0.3"
thiserror = "1.0"
someip = {git = "https://github.com/sjames/someip.git"}
someip_derive = {git = "https://github.com/sjames/someip.git"}
async-trait = "0.1.31"
serde = "1"
serde_derive = "1"
tracing = "0.1.32"
toml = "0.5"
tokio = {version = "1.4.0", features = ["full"]}
async-signals = "0.4.0"
libc = "0.2.121"
futures-util = "0.3.21"
fix-hidden-lifetime-bug = "0.2.4"

[dev-dependencies]
interface-example = {git = "https://github.com/sabaton-rs/interface-example.git"}
tracing-subscriber = "0.3.9"

#[patch.crates-io]
#cyclonedds-rs = { path = "../cyclonedds-rs" }
#cdds_derive = { path = "../cyclonedds-rs/dds_derive" }
#someip = {path = "../someip"}
#someip_derive = {path = "../someip/generator_macros"}
#interface-example = {path = "../interface-example"}