[package]
name = "sabaton-mw"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0 OR LicenseRef-sabaton-commercial"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyclonedds-rs = "0.5"
cdds_derive = "0.1.1"
async-std = "1.9.0"
futures = "0.3"
thiserror = "1.0"
someip = "0.1.0"
someip_derive = "0.1.0"
async-trait = "0.1.31"
serde = "1"
serde_derive = "1"
tracing = "0.1.32"
toml = "0.5"
tokio = {version = "1.4.0", features = ["full"]}
async-signals = "0.4.0"
libc = "0.2.121"
futures-util = "0.3.21"
fix-hidden-lifetime-bug = "0.2.4"

[dev-dependencies]
interface-example = {git = "https://github.com/sabaton-rs/interface-example.git"}
tracing-subscriber = "0.3.9"



