[package]
name = "sabaton-mw"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Sojan James <Sojan.James@gmail.com>"]
description = "Sabaton Middleware"
homepage = "https://github.com/sabaton-rs/sabaton-mw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyclonedds-rs = "0.6.5"
cdds_derive = "0.1.1"
async-std = "1.9.0"
futures = "0.3"
thiserror = "1.0"
someip = "0.1.1"
someip_derive = "0.1.0"
async-trait = "0.1.31"
serde = "1"
serde_derive = "1"
tracing = "0.1.32"
toml = "0.5"
tokio = {version = "1", features = ["full"]}
async-signals = "0.4.0"
libc = "0.2.121"
futures-util = "0.3.21"

[dev-dependencies]
interface-example = {git = "https://github.com/sabaton-rs/interface-example.git"}
tracing-subscriber = "0.3.9"


